--- a/RepoQuiz.Tests/RepoQuiz.Tests.csproj
+++ b/RepoQuiz.Tests/RepoQuiz.Tests.csproj
@@ -104,6 +104,7 @@
     <Compile Include="DAL\NameGeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="StudentTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
